fix:z-index adjustment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -198,7 +198,7 @@
     top: 0;
     left: 0;
     background-color: rgba(98,98,98,0.8);
-    z-index: 100;
+    z-index: 200;
 }
 
 .header .bulletin-detail .detail-wrapper {
@@ -311,17 +311,17 @@
 
 /* Detail box transition effect */
 
-.detail-enter-active,
-.detail-leave-active {
-    transition: 1s;
+.bulletin-detail-enter-active,
+.bulletin-detail-leave-active {
+    transition: 0.5s;
 }
 
-.detail-enter-from,
-.detail-leave-to {
+.bulletin-detail-enter-from,
+.bulletin-detail-leave-to {
     opacity: 0;
 }
 
-.detail-enter-to,
-.detail-leave-from {
+.bulletin-detail-enter-to,
+.bulletin-detail-leave-from {
     opacity: 1;
 }
